# ParamBin

./: .Makefile.swo  .gitignore  CMakeLists.txt  Makefile  README.md  libparambin.1.2.dylib
Backups/: Makefile
ParamBin/: CMakeLists.txt
ParamBin/include/: parambin.hpp
ParamBin/src/: parambin.cpp
UseParamBin/: CMakeLists.txt  README.md  main.cpp
Utils/: .gitignore  CMakeLists.txt
Utils/include/pwutils/: pwconstants.h  pwdataio.hpp  pwdir.h
Utils/src/: pwdataio.cpp  pwdir.cpp
include/: .parambin.hpp.swp  parambin.hpp  siscales.h
include/ParamBin/: parambin.hpp
src/: .parambin.cpp.swp  CMakeLists.txt  parambin.cpp  parambinstrings.cpp  siscales.cpp
test/: .test3.cpp.swp  .test4.cpp.swp  .test5.cpp.swp  CMakeLists.txt  air2  main.cpp  test1  test1.cpp  test2  test2.cpp  test3  test3.cpp  test4  test4.cpp  test5  test5.cpp  test6.cpp
tests/: CMakeLists.txt  argon.txt  input1.txt  input2.txt  test1.cpp  test2.cpp  test3.cpp  test4.cpp  test5.cpp  test6.cpp
